<resources>
    <string name="app_name">Rego</string>
    <string name="user_registration_header_text_view">Create Account</string>
    <string name="user_registration_email_hint">Email</string>
    <string name="user_registration_password_hint">Password</string>
    <string name="user_registration_create_account_button">Create Account</string>
    <string name="user_registration_sign_in_here_text_view">Already Registered? Sign in here</string>
    <string name="login_activity_user_login_header_text_view">User Login</string>
    <string name="login_activity_email_hint">Email</string>
    <string name="login_activity_password_hint">Password</string>
    <string name="login_activity_login_button_hint">Login</string>
    <string name="login_activity_sign_up_here_text_view">Don\'t have an account? Sign up here</string>
    <string name="user_first_name_header_text_view">My first name is</string>
    <string name="user_first_name_edit_text">First Name</string>
    <string name="user_first_name_hint_text">This is how it will appear in Rego</string>
    <string name="user_last_name_header_text_view">Enter Your Last Name</string>
    <string name="user_last_name_edit_text">Last Name</string>
    <string name="user_birthday_header_text_view">My birthday is</string>
    <string name="user_gender_header_text_view">I am a</string>
    <string-array name="user_gender_options_spinner">
        <item name="select_one">Select One</item>
        <item name="male">Male</item>
        <item name="female">Female</item>
        <item name="other">Other</item>
    </string-array>
    <string name="profile_activity_first_name">First Name</string>
    <string name="profile_activity_last_name">Last Name</string>
    <string name="profile_activity_birthday_date">Select Your Birthday</string>
    <string name="profile_activity_save_profile_button">Save Profile</string>
    <string name="profile_activity_log_out_button">Log Out</string>
    <string name="error_weak_password">Password is too weak</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="error_user_exists">User already exists</string>
    <string name="user_birthday_hint_text">Your age will be public</string>
    <string name="user_profile_picture_header_text_view">My best photo is</string>
    <string-array name="more_gender_options">

        <item>Agender</item>
        <item>Androgyne</item>
        <item>Androgyny</item>
        <item>Bigender</item>
        <item>Cis Female</item>
        <item>Cis Male</item>
        <item>Cisgender</item>
        <item>Demiboy</item>
        <item>Demigender</item>
        <item>Demigirl</item>
        <item>Female to Male</item>
        <item>Gender Non-Conforming</item>
        <item>Gender Questioning</item>
        <item>Gender Variant</item>
        <item>Genderfluid</item>
        <item>Genderqueer</item>
        <item>Intergender</item>
        <item>Intersex</item>
        <item>Male to Female</item>
        <item>Neither</item>
        <item>Neutrois</item>
        <item>Non-Binary</item>
        <item>None Gender</item>
        <item>Omnigender</item>
        <item>Pangender</item>
        <item>Poligender</item>
        <item>Third Gender</item>
        <item>Trans Man</item>
        <item>Trans Person</item>
        <item>Trans Woman</item>
        <item>Transgender Man</item>
        <item>Transgender Woman</item>
        <item>Transsexual</item>
        <item>Trigender</item>
        <item>          </item>
        <item>Other</item>
    </string-array>
    <string name="title_location_permission">Allow Rego to access your location even when you are not using the app?</string>
    <string name="text_location_permission">We will only use your location to find users you have crossed paths with.</string>
    <string name="positive_button_allow">Allow</string>
    <string name="title_activity_main_tabbed">MainTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tabbed_main">ActivityTabbedMain</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_activity_discover_map">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_edit_info">EditInfoActivity</string>
    <string name="chat_activity_hint_enter_a_message">Type a message...</string>
    <string name="audio_record_message_title">To use this feature, allow Rego to access your microphone.</string>
    <string name="camera_permissions_title">To use this feature, allow Rego to access your camera.</string>
</resources>