<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.reylo.rego.Basics.UserRegistration">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/userRegistrationHeaderTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_registration_header_text_view"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_margin="15dp"/>

    <EditText
        android:id="@+id/userRegistrationEmailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_registration_email_hint"
        android:inputType="textEmailAddress"
        android:layout_margin="15dp" />

    <EditText
        android:id="@+id/userRegistrationPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/user_registration_password_hint"
        android:inputType="textPassword"
        android:layout_margin="15dp" />

    <Button
        android:id="@+id/userRegistrationCreateAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_registration_create_account_button"
        android:layout_margin="15dp" />

    <TextView
        android:id="@+id/userRegistrationAlreadyRegisteredTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/user_registration_sign_in_here_text_view"
        android:textAlignment="center" />
</LinearLayout>

</RelativeLayout>
