<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reylo.rego.Basics.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginActivityHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_user_login_header_text_view"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/loginActivityEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_activity_email_hint"
            android:inputType="textEmailAddress"
            android:layout_margin="15dp" />

        <EditText
            android:id="@+id/loginActivityPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_activity_password_hint"
            android:inputType="textPassword"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/loginActivityLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_activity_login_button_hint"
            android:layout_margin="15dp" />

        <TextView
            android:id="@+id/loginActivitySignUpHereTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/login_activity_sign_up_here_text_view"
            android:textAlignment="center" />
    </LinearLayout>

</RelativeLayout>
