<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reylo.rego.Basics.UserFirstName">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userFirstNameActivityHeaderTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/user_first_name_header_text_view"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userFirstNameActivityEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/user_first_name_edit_text"
            android:inputType="textPersonName"
            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZzÁáÂâÃãÀàÇçÉéÊêÍíÓóÔôÕõÚú"/>

        <TextView
            android:id="@+id/userFirstNameActivityHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/user_first_name_hint_text"
            />

        <ImageView
            android:id="@+id/userFirstNameActivityNextArrow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_chevron_right_black_24dp"
            android:layout_margin="15dp"
            android:layout_gravity="right"/>



    </LinearLayout>

    </LinearLayout>

</RelativeLayout>
