<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reylo.rego.ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="My Profile"
                    android:textAlignment="center"
                    android:textSize="45sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="15dp"
                    android:background="@android:color/darker_gray"
                    android:src="@drawable/ic_account_box_white_48dp" />

                <EditText
                    android:id="@+id/profileActivityFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/profile_activity_first_name" />

                <EditText
                    android:id="@+id/profileActivityLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="@string/profile_activity_last_name" />

                <Button
                    android:id="@+id/profileactivitySelectBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/profile_activity_birthday_date"/>

                <Spinner
                    android:id="@+id/profileActivityGenderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp" />

                <EditText
                    android:id="@+id/profileActivityAboutUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="about -INSTERT USER'S FIRST NAME HERE- (Change later)" />

                <EditText
                android:id="@+id/profileActivityJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:hint="Job Title" />

                <EditText
                    android:id="@+id/profileActivityCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="Company" />

                <EditText
                    android:id="@+id/profileActivitySchool"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:hint="School" />

                <Button
                    android:id="@+id/profileActivitySaveButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/profile_activity_save_profile_button" />

                <Button
                    android:id="@+id/profileActivityLogOutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/profile_activity_log_out_button" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>
